--- a/backend_mongo/src/main/resources/application.properties
+++ b/backend_mongo/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 spring.application.name=backend_mongo
-spring.data.mongodb.uri=
-spring.data.mongodb.database=
-
+spring.data.mongodb.uri=mongodb+srv://api-user:u3HP66cwXzdGf44e@cluster0.a8qjx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=test-database
